# weather_bot

./: .env.template  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: blank.yml
src/: main.py
src/api/: weather_api.py
src/config/: config.py
src/database/: create_db.py  func.py  main.py  models.py
src/geolocator/: geolocator.py
src/telegram_bot/: main.py
src/telegram_bot/handlers/custom/: five_days.py  now.py  standard_func.py
src/telegram_bot/handlers/default/: help.py  start.py
src/telegram_bot/keyboards/: reply.py
src/telegram_bot/middlewares/: middleware.py
