[tool.poetry]
name = "weather_bot"
version = "0.1.0"
description = "bot with integration openweathermap"
authors = ["Artur_Lazarevich <compact20002008@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.1"
aiogram = "^3.20.0.post0"
sqlalchemy = "^2.0.41"
dotenv = "^0.9.9"
geopy = "^2.4.1"
aiosqlite = "^0.21.0"
asyncpg = "^0.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"